# daeo-tracking-solver

./: CMakeLists.txt  README.md  build.sh
cmake/: FindNAG_dco_cpp.cmake
src/: ad2024-demo.cpp
src/include/utils/: daeo_utils.hpp  sylvesters_criterion.hpp
src/solver/: daeo_solver.hpp  global_optimizer.hpp  logging.hpp  objective.hpp  xprime.hpp
